feat(image): gera a imagem do opengraph dinamicamente

--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,10 @@
     "laravel": {
       "providers": [
         "Agenciafmd\\SocialMeta\\Providers\\SocialMetaServiceProvider"
-      ]
+      ],
+      "aliases": {
+        "OpenGraphImage": "\\Facades\\Agenciafmd\\SocialMeta\\Services\\OpenGraphImage"
+      }
     }
   }
 }
