--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
   "authors": [
     {
       "name": "Irineu Martins Junior",
-      "email": "irineu@fmd",
+      "email": "irineu@fmd.ag",
       "homepage": "http://fmd.ag/",
       "role": "Developer"
     }
