--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,8 @@
 {
   "name": "agenciafmd/laravel-social-meta",
   "description": "Social Meta for those who doesn't know for what it for",
+  "homepage": "https://github.com/agenciafmd/laravel-social-meta",
+  "license": "MIT",
   "authors": [
     {
       "name": "Irineu Martins Junior",
@@ -29,6 +31,5 @@
         "OpenGraphImage": "\\Facades\\Agenciafmd\\SocialMeta\\Services\\OpenGraphImage"
       }
     }
-  },
-  "license": "MIT"
+  }
 }
