--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
     }
   ],
   "require": {
-    "laravel/framework": "8.*"
+    "ext-fileinfo": "*",
+    "intervention/image": "^3.11",
+    "laravel/framework": "^11.*"
   },
   "autoload": {
     "files": [
