--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
   "require": {
     "ext-fileinfo": "*",
     "intervention/image": "^3.11",
-    "laravel/framework": "^11.*"
+    "laravel/framework": "^11.0"
   },
   "autoload": {
     "files": [
